--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ modules/__pycache__/test_data.cpython-37-pytest-6.2.4.pyc
 modules/__pycache__/test_data.cpython-38-pytest-6.2.3.pyc
 test/frames_test.json
 test/__pycache__/test_data.cpython-38-pytest-6.2.3.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+test/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
+modules/__pycache__/__init__.cpython-38.pyc
